--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Meie+Script&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+* {
+  font-weight: 300;
+}
+
+.logo {
+  font-family: 'Meie Script', cursive;
+}
