--- a/app/globals.css
+++ b/app/globals.css
@@ -84,15 +84,9 @@
 }
 
 nav ul li div button,
-nav ul li div button:hover, 
-nav ul li div button:focus,
-nav ul li div button:focus-visible {
+nav ul li div button:focus {
   outline: none !important;
-  background-color: transparent !important;
-  box-shadow: none !important;
-  --tw-ring-offset-shadow: none !important;
-  --tw-ring-shadow: none !important;
-  --tw-ring-color: transparent !important;
+  user-select: none !important;
 }
 
 
